# limitless-organizer-tracker

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  Dockerfile.docs  README.md  docker-compose.yml  fleet.yaml  mkdocs.yml  nginx.docs.conf
backend/: Dockerfile  Dockerfile.prod  Dockerfile.worker  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 59209420e443_add_organizers_table.py  904571dc5664_initial_tables.py  9be0f1da5379_add_index_on_organizers_detected_at.py  a32d43dfddd8_initial_tables.py  b7e3a1f2c456_add_event_log_table.py  c4a1e8b93d71_add_config_entries_table.py  d7c22892b275_add_index_on_organizer_activity_game.py  ff32d370af50_add_review_note_to_application_status_.py
backend/app/: celery_app.py  celery_signals.py  config.py  config_db.py  events.py  main.py
backend/app/analytics/: buckets.py  frontier.py  regression.py
backend/app/api/: auth.py  pagination.py  schemas.py
backend/app/db/: models.py  session.py  types.py
backend/app/limitless_client/: ingestion.py  schemas.py  tournaments_api.py
backend/app/notifications/: discord.py
backend/app/scraper/: application_status.py  browser.py  organizer_profile.py  parsing.py  resubmit.py  selectors.py  session.py
backend/app/tasks/: backfill_tasks.py  organizer_tasks.py  resubmit_tasks.py  status_tasks.py  tournament_tasks.py
backend/tests/: conftest.py  helpers.py
backend/tests/acceptance/: test_login_flow.py  test_organizer_profile_flow.py  test_resubmission_flow.py  test_scheduled_tasks_flow.py
backend/tests/fixtures/: sample_tournaments.json
(+169 files in other folders)
