[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limitless-organizer-tracker-backend"
version = "0.1.0"
description = "API, scraper and Celery workers for tracking Limitless TCG organizer applications and activity"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "celery>=5.4",
    "redis>=5.0",
    "httpx>=0.27",
    "playwright>=1.45",
    "beautifulsoup4>=4.12",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "freezegun>=1.5",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: hits the real Limitless site; skipped by default",
]
addopts = "-m 'not live'"

[tool.ruff]
line-length = 100
target-version = "py312"
